# anyform

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.postgres.yml  docker-compose.yml  install.sh
.github/workflows/: npm-test.yml  release.yml
anyform/: Cargo.toml
anyform-cli/: Cargo.toml
anyform-cli/src/: main.rs
anyform-cli/src/commands/: form.rs  mod.rs  submissions.rs
anyform-client/: Cargo.toml
anyform-client/src/: api.rs  form_client.rs  form_state.rs  hydrate.rs  lib.rs  schema.rs  validation.rs
anyform-core/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
anyform-core/axum-sea-forms-core/: Cargo.toml
anyform-core/axum-sea-forms-core/src/: condition.rs  lib.rs
anyform-core/src/: hydrate.ts  index.ts
anyform-core/src/condition/: evaluator.ts  index.ts  operators.ts
anyform-core/src/state/: form-state.ts  index.ts
anyform-core/src/types/: condition.ts  index.ts  schema.ts
anyform-core/src/validation/: index.ts  rules.ts  type-validators.ts  validators.ts
anyform-js/: README.md  package-lock.json  package.json
anyform-js/wasm/: anyform_client.d.ts  package.json
anyform-next/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
anyform-next/src/: index.ts
anyform-next/src/components/: AnyFormClient.tsx  AnyFormRSC.tsx
anyform-next/src/server/: actions.ts  fetchForm.ts  index.ts
anyform-next/src/types/: next.d.ts
anyform-react/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
anyform-react/src/: index.ts
anyform-react/src/__tests__/: setup.ts  useAnyForm.props.test.tsx  useAnyForm.test.tsx
anyform-react/src/__tests__/mocks/: anyform-js.ts  wasm-js.ts
anyform-react/src/components/: AutoFormField.tsx  Form.tsx
anyform-react/src/context/: AnyFormProvider.tsx
anyform-react/src/engine/: index.ts
anyform-react/src/hooks/: useAnyForm.ts
anyform-react/src/types/: index.ts
anyform-react/src/utils/: tailwind.ts  wasm.ts
anyform-wasm-js/: README.md  package-lock.json  package.json  tsconfig.json
anyform-wasm-js/src/: index.ts
anyform-wasm-js/wasm/: anyform_client.js  anyform_client_bg.wasm  anyform_client_bg.wasm.d.ts
anyform-wordpress/: .distignore  .gitignore  README.md  anyform.php  composer.json  docker-compose.yml  phpunit.xml.dist  readme.txt  uninstall.php
anyform-wordpress-tests/: README.md  composer.json  phpunit.xml.dist
anyform-wordpress-tests/tests/: bootstrap.php
anyform-wordpress-tests/tests/phpunit/: class-af-post-type-test.php  class-af-submissions-test.php
anyform-wordpress/assets/css/: anyform-admin.css  anyform.css
anyform-wordpress/assets/js/: anyform-core.min.js  anyform-wasm.js
anyform-wordpress/assets/js/src/: index.ts
anyform-wordpress/includes/: class-af-database.php  class-af-email.php  class-af-post-type.php  class-af-rest-api.php  class-af-settings.php  class-af-shortcode.php  class-af-submissions.php
anyform-wordpress/tests/: bootstrap.php
anyform-wordpress/tests/phpunit/: class-af-email-test.php  class-af-rest-api-test.php  class-af-settings-test.php  class-af-shortcode-test.php
anyform/examples/: basic_form.rs
anyform/src/: error.rs  lib.rs  router.rs  seed.rs
anyform/src/commands/: form.rs  mod.rs  submissions.rs
anyform/src/entities/: field.rs  field_option.rs  form.rs  mod.rs  result.rs  step.rs  submission.rs
anyform/src/extractors/: form_submission.rs  request_id.rs  validated_submission.rs
anyform/src/handlers/: mod.rs
anyform/src/migration/: m20250101_000002_create_steps.rs  m20250101_000003_create_fields.rs  m20250101_000004_create_field_options.rs  m20250101_000005_create_submissions.rs  m20250101_000006_create_results.rs  m20250101_000007_rename_tables_af.rs
anyform/src/render/: html.rs  json.rs  mod.rs
anyform/src/schema/: form_settings.rs  mod.rs  ui_options.rs  validation_rules.rs  value_type.rs
anyform/src/services/: form_builder.rs  mod.rs
anyform/src/validation/: mod.rs
anyform/tests/: feature_flag_tests.rs  form_builder_tests.rs  handler_admin_tests.rs  handler_error_tests.rs  handler_public_tests.rs  health_check_tests.rs  render_json_tests.rs  sync_tests.rs  validation_tests.rs  workflow_tests.rs
anyform/tests/common/: app.rs  cli.rs  db.rs  fixtures.rs  mod.rs
anyform/tests/snapshots/: render_json_tests__contact_form_json_snapshot.snap
axum-sea-forms/: Cargo.toml
axum-sea-forms-cli/: Cargo.toml
axum-sea-forms-cli/src/: main.rs
axum-sea-forms-cli/src/commands/: form.rs  submissions.rs
axum-sea-forms-core/: Cargo.toml
axum-sea-forms-core/src/: lib.rs
axum-sea-forms/examples/: basic_form.rs
axum-sea-forms/src/: error.rs  lib.rs  response.rs  router.rs
axum-sea-forms/src/entities/: field.rs  form.rs  mod.rs  result.rs  step.rs  submission.rs
axum-sea-forms/src/extractors/: mod.rs  validated_submission.rs
axum-sea-forms/src/handlers/: responses.rs
axum-sea-forms/src/render/: html.rs  tera_render.rs
axum-sea-forms/src/schema/: field_value.rs  ui_options.rs
axum-sea-forms/src/services/: mod.rs
axum-sea-forms/tests/: form_builder_tests.rs  render_json_tests.rs  sync_tests.rs  validation_tests.rs
axum-sea-forms/tests/common/: fixtures.rs  mod.rs
docs/: to-dos-1.md  to-dos-2.md  to-dos-3.md  to-dos-4.1.md  to-dos-4.6.md  to-dos-5.md  to-dos-6.md
docs/prd/libs/asf/: phase-3.5.md
examples/: README.md
examples/nextjs-app-router/app/contact/: page.tsx
examples/react-basic/: ContactForm.tsx  MultiStepForm.tsx
homebrew/: anyform.rb
migration/: Cargo.toml
migration/src/: lib.rs  m20250101_000001_create_forms.rs  m20250101_000002_create_steps.rs  m20250101_000003_create_fields.rs  m20250101_000004_create_field_options.rs  m20250101_000005_create_submissions.rs  m20250101_000006_create_results.rs
scoop/: anyform.json
