[workspace]
resolver = "2"
members = ["axum-sea-forms", "axum-sea-forms-cli", "axum-sea-forms-core", "migration"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wordpuppi/axum-sea-forms"
keywords = ["axum", "forms", "sea-orm", "web", "survey"]
categories = ["web-programming", "database"]

[workspace.dependencies]
# Web framework (aligned with WordPuppi)
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header", "multipart", "form"] }
tower = "0.5"
tower-sessions = "0.14"
http = "1.0"

# Database (aligned with WordPuppi)
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "sqlx-postgres", "sqlx-mysql", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "sqlx-postgres", "sqlx-mysql", "runtime-tokio-rustls"] }

# Templating
tera = "1.19"

# Serialization (aligned with WordPuppi)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities (aligned with WordPuppi)
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1.45", features = ["rt-multi-thread"] }
tracing = "0.1"

# Validation & conditions
regex = "1.11"
evalexpr = "13.0"

# CLI (aligned with WordPuppi)
clap = { version = "4", features = ["derive"] }

# Internal crates
axum-sea-forms = { path = "axum-sea-forms" }
axum-sea-forms-core = { path = "axum-sea-forms-core" }
migration = { path = "migration" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
