[package]
name = "anyform-client"
version = "0.4.0"
edition = "2021"
description = "WASM client for anyform - browser-side form handling"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wordpuppi/anyform"
keywords = ["wasm", "forms", "validation", "client"]
categories = ["wasm", "web-programming"]
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Browser APIs
web-sys = { version = "0.3", features = [
    "console",
    "CssStyleDeclaration",
    "Document",
    "DomTokenList",
    "Element",
    "Event",
    "EventTarget",
    "Headers",
    "HtmlButtonElement",
    "HtmlCollection",
    "HtmlElement",
    "HtmlFormElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "Node",
    "NodeList",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
] }
js-sys = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

# Utilities
uuid = { version = "1", features = ["serde", "js", "v4"] }
regex = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
