[package]
name = "anyform"
description = "Any database. Any form. Zero hassle."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["forms", "database", "web", "survey", "axum"]
categories = ["web-programming", "database"]
readme = "../README.md"

[[bin]]
name = "anyform"
path = "src/bin/anyform.rs"
required-features = ["cli"]

[[example]]
name = "basic_form"
required-features = ["router"]

[features]
default = ["json", "tera"]
json = []
tera = ["dep:tera"]
handlers = []
router = ["handlers"]
admin = ["handlers"]
cli = ["dep:clap", "dep:glob", "dep:tokio", "dep:anyhow", "dep:tower-http", "full"]
full = ["json", "tera", "handlers", "router", "admin"]

[dependencies]
# Web framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-sessions = { workspace = true, optional = true }
http = { workspace = true }

# Database
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }

# Templating (optional)
tera = { workspace = true, optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

# Validation & conditions
regex = { workspace = true }
evalexpr = { workspace = true }

# Form parsing
form_urlencoded = "1.2"

# CLI (optional)
clap = { workspace = true, optional = true }
glob = { version = "0.3", optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"], optional = true }
anyhow = { workspace = true, optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
pretty_assertions = "1.4"
insta = { version = "1.42", features = ["yaml", "json"] }
tempfile = "3"
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
bytes = "1"
assert_cmd = "2.0"
predicates = "3.1"
