[package]
name = "axum-sea-forms-core"
description = "Shared types for axum-sea-forms (conditions, validation rules)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
