[package]
name = "migration"
description = "SeaORM migrations for axum-sea-forms"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
sea-orm-migration = { workspace = true }
uuid = { workspace = true }

[lib]
name = "migration"
path = "src/lib.rs"
